polish UI enabling different color schema remove never used global serial port HoTTAdapter* make latitude/longitude filter invisible